src/parser/snapshots/monkey_language_server__parser__test__array_happy_1_errors.snap
---
source: src/parser/test.rs
description: "[1,2,3]; 5"
expression: "parser_errors(\"[1,2,3]; 5\", errors)"
---
[1,2,3]; 5
