src/parser/snapshots/monkey_language_server__parser__test__array_happy_2_errors.snap
---
source: src/parser/test.rs
description: "[1,\"foo\",3];"
expression: "parser_errors(\"[1,\\\"foo\\\",3];\", errors)"
---
[1,"foo",3];
