src/parser/snapshots/monkey_language_server__parser__test__array_happy_3_errors.snap
---
source: src/parser/test.rs
description: "[1,\"foo\",fn(x) { x + 1 }];"
expression: "parser_errors(\"[1,\\\"foo\\\",fn(x) { x + 1 }];\", errors)"
---
[1,"foo",fn(x) { x + 1 }];
