src/parser/snapshots/monkey_language_server__parser__test__array_index_happy_1.snap
---
source: src/parser/test.rs
description: "foo[1]"
expression: result
---
[
    Index {
        token: Token(LBracket, "[", (0,3)->(0,4)),
        object: Identifier {
            token: Token(Identifier, "foo", (0,0)->(0,3)),
            name: "foo",
        },
        index: Ok(
            Int {
                token: Token(Int, "1", (0,4)->(0,5)),
                value: 1,
            },
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 6,
            },
        },
    },
]

===================================

foo[1]
