src/parser/snapshots/monkey_language_server__parser__test__array_index_happy_2_errors.snap
---
source: src/parser/test.rs
description: "foo[add(3)]"
expression: "parser_errors(\"foo[add(3)]\", errors)"
---
foo[add(3)]
