src/parser/snapshots/monkey_language_server__parser__test__array_index_happy_4_errors.snap
---
source: src/parser/test.rs
description: "[1,2,3,4][1+2]"
expression: "parser_errors(\"[1,2,3,4][1+2]\", errors)"
---
[1,2,3,4][1+2]
