src/parser/snapshots/monkey_language_server__parser__test__array_index_unhappy_2_errors.snap
---
source: src/parser/test.rs
description: "foo[1+"
expression: "parser_errors(\"foo[1+\", errors)"
---
foo[1+
     ^ SyntaxError: Expected ']' not found.
